--- a/ui/src/app/views/admin/worker-model-pattern/list/worker-model-pattern.list.html
+++ b/ui/src/app/views/admin/worker-model-pattern/list/worker-model-pattern.list.html
@@ -1,7 +1,8 @@
 <div class="wrapper">
     <app-breadcrumb [path]="path">
-        <a class="ui right floated green button small buttonBreadcrumb" [routerLink]="['add']">{{ 'btn_add' | translate
-            }}</a></app-breadcrumb>
+        <button nz-button nzType="primary" class="buttonBreadcrumb"
+                [routerLink]="['add']">Add</button>
+    </app-breadcrumb>
     <app-scrollview class="scrollview">
         <app-data-table [withFilter]="filter" [columns]="columns" [data]="workerModelPatterns" [loading]="loading">
         </app-data-table>
