--- a/ui/src/app/views/auth/signin/signin.scss
+++ b/ui/src/app/views/auth/signin/signin.scss
@@ -5,6 +5,18 @@ a {
   margin-top: 5px;
 }
 
+.nzSegment {
+
+  hr {
+    width: 100%;
+    margin-bottom: 25px;
+  }
+  button {
+    margin-bottom: 15px;
+    margin-left: 0;
+  }
+}
+
 nz-alert {
   margin-bottom: 10px;
 }
