--- a/ui/src/app/views/auth/verify/verify.html
+++ b/ui/src/app/views/auth/verify/verify.html
@@ -1,54 +1,39 @@
-<div class="ui centered grid verify">
-    <div class="row">
-        <div class="column">
+
+    <nz-row>
+        <nz-col [nzSpan]="24">
             <div *ngIf="loading;then load;else loaded"></div>
             <ng-template #load>
-                <div class="loading">
-                    <div class="ui active small inline loader"></div>
-                    <div>{{ 'common_loading' | translate }}</div>
-                </div>
+                <nz-spin nzTip="Loading..."></nz-spin>
             </ng-template>
             <ng-template #loaded>
-                <div *ngIf="showInitTokenForm" class="ui bottom attached segment">
-                    <div class="ui info message">
-                        <p>{{ 'auth_message_init_token' | translate }}</p>
-                    </div>
-                    <form class="ui form" (ngSubmit)="verify(verifyForm)" #verifyForm="ngForm">
-                        <div class="field">
-                            <label>{{ 'account_signup_init_token' | translate }}</label>
-                            <input type="password" name="init_token" ngModel required>
-                        </div>
-                        <div class="field right aligned">
-                            <button class="ui green button"
-                                type="submit">{{ 'account_login_btn_verify' | translate }}</button>
-                        </div>
+                <div *ngIf="showInitTokenForm">
+                    <nz-alert nzType="info" nzMessage="If you just generated the CDS configuration you can give an optional init token."></nz-alert>
+                    <form nz-form (ngSubmit)="verify(verifyForm)" #verifyForm="ngForm">
+                        <nz-form-item>
+                            <nz-form-label>Initialization token</nz-form-label>
+                            <nz-form-control>
+                                <input nz-input type="password" name="init_token" ngModel required>
+                            </nz-form-control>
+                        </nz-form-item>
+                        <nz-form-item nzJustify="end">
+                            <button nz-button nzType="primary" type="submit">Verify</button>
+                        </nz-form-item>
                     </form>
                 </div>
-                <div *ngIf="showSuccessMessage" class="column">
-                    <h3 class="ui top block attached header">
-                        {{ 'account_verify_title' | translate }}
-                    </h3>
-                    <div class="ui bottom attached segment">
-                        <div class="ui green message">
-                            <p>{{ 'auth_verify_success' | translate: {username: user.username} }}</p>
-                        </div>
-                        <button id="loginButton" class="fluid ui button green" type="button"
-                            (click)="navigateToHome()">{{ 'auth_btn_go_to_home' | translate }}</button>
-                    </div>
+                <div *ngIf="showSuccessMessage">
+                    <h3>Account information</h3>
+                    <nz-alert nzType="success" [nzMessage]="successTmpl"></nz-alert>
+                    <ng-template #successTmpl>
+                        <p>{{ 'auth_verify_success' | translate: {username: user.username} }}</p>
+                    </ng-template>
+                    <button id="loginButton" class="floatRight" nz-button nzType="primary" type="button"
+                            (click)="navigateToHome()">Go to CDS</button>
                 </div>
-                <div *ngIf="showErrorMessage" class="ui bottom attached segment">
-                    <div class="ui red message">
-                        <p>{{ 'auth_verify_error' | translate }}</p>
-                    </div>
-                    <form class="ui form">
-                        <div class="field">
-                            <button class="fluid ui button primary" (click)="navigateToSignin()">
-                                {{ 'account_btn_signin' | translate }}
-                            </button>
-                        </div>
-                    </form>
+                <div *ngIf="showErrorMessage">
+                    <nz-alert nzType="error" nzMessage="Unable to verify this account."></nz-alert>
+                    <button nz-button nzType="primary" nzBlock (click)="navigateToSignin()">Sign in</button>
                 </div>
             </ng-template>
-        </div>
-    </div>
-</div>
+        </nz-col>
+    </nz-row>
+
